Vanilla camel and vanilla frog for 1.16.5

--- a/src/main/resources/assets/xi_mod/lang/en_us.json
+++ b/src/main/resources/assets/xi_mod/lang/en_us.json
@@ -60,12 +60,14 @@
   "block.xi_mod.purplewooldecorative": "Purple wool decorative",
   "block.xi_mod.bordeauxwool": "Laine bordeaux",
   "block.xi_mod.baobabpressureplate": "Plaque de pression en baobab",
+  "item.xi_mod.camel_spawn_egg": "Camel Spawn Egg",
   "block.xi_mod.amarante_slab": "Amarante Slab",
   "block.xi_mod.ruby_ore": "Ruby Ore",
   "block.xi_mod.orangewooldecorative": "Orange wool decorative",
   "block.xi_mod.bituminouscoal": "Bituminous coal",
   "block.xi_mod.ironslabs": "Iron slab",
   "subtitles.shuglin_step": "Bruit de pas de Shuglin",
+  "entity.xi_mod.camel": "Camel",
   "block.xi_mod.purpurwoolstairs": "Escalier en laine purpur",
   "block.xi_mod.pinklily": "Lys rose",
   "block.xi_mod.bilberries": "Bilberries",
@@ -144,6 +146,7 @@
   "block.xi_mod.beigewoolslabs": "Dalle en laine beige",
   "block.xi_mod.sakura_button": "Sakura Button",
   "block.xi_mod.purpurterracotta": "Purpur terracotta",
+  "item.xi_mod.frog_spawn_egg": "Frog Spawn Egg",
   "block.xi_mod.rubbervineleaves": "Liane de gatope",
   "itemGroup.tabxi": "Xi mod",
   "block.xi_mod.magentawoolslabs": "Magenta wool slab",
@@ -201,6 +204,7 @@
   "block.xi_mod.limeblueterracotta": "Lime blue terracotta",
   "block.xi_mod.yellowlily": "Lys jaune",
   "block.xi_mod.magentahayblock": "Magenta Haybale",
+  "entity.xi_mod.frog": "Frog",
   "subtitles.shuglin_death": "Shuglin qui meurt",
   "block.xi_mod.yellowhayblock": "Yellow Haybale",
   "item.xi_mod.beigedye": "teinture beige",
