--- a/src/main/resources/assets/xi_mod/lang/fr_fr.json
+++ b/src/main/resources/assets/xi_mod/lang/fr_fr.json
@@ -60,12 +60,14 @@
   "block.xi_mod.bordeauxwool": "Laine bordeaux",
   "block.xi_mod.purplewooldecorative": "Laine violette décorative",
   "block.xi_mod.baobabpressureplate": "Plaque de pression en baobab",
+  "item.xi_mod.camel_spawn_egg": "Camel Spawn Egg",
   "block.xi_mod.amarante_slab": "Dalle en planches d\u0027amarante",
   "block.xi_mod.ruby_ore": "Minerai de rubis",
   "block.xi_mod.orangewooldecorative": "Laine orange décorative",
   "block.xi_mod.ironslabs": "Dalle en fer",
   "block.xi_mod.bituminouscoal": "Houille",
   "subtitles.shuglin_step": "Bruit de pas de Shuglin",
+  "entity.xi_mod.camel": "Camel",
   "block.xi_mod.pinklily": "Lys rose",
   "block.xi_mod.purpurwoolstairs": "Escalier en laine purpur",
   "block.xi_mod.asphaltx_20": "Asphalte x2",
@@ -144,6 +146,7 @@
   "block.xi_mod.beigewoolslabs": "Dalle en laine beige",
   "block.xi_mod.sakura_button": "Bouton en sakura",
   "block.xi_mod.purpurterracotta": "Terre cuite purpur",
+  "item.xi_mod.frog_spawn_egg": "Frog Spawn Egg",
   "block.xi_mod.rubbervineleaves": "Liane de gatope",
   "itemGroup.tabxi": "Xi mod",
   "block.xi_mod.magentawoolslabs": "Dalle en laine magenta",
@@ -202,6 +205,7 @@
   "block.xi_mod.limeblueterracotta": "Terre cuite bleu-vert",
   "block.xi_mod.yellowlily": "Lys jaune",
   "block.xi_mod.magentahayblock": "Bloc de paille magenta",
+  "entity.xi_mod.frog": "Frog",
   "subtitles.shuglin_death": "Shuglin qui meurt",
   "block.xi_mod.yellowhayblock": "Bloc de paille jaune",
   "item.xi_mod.beigedye": "teinture beige",
